# code

./: .gitignore
cmake/: compile_flags_and_defs.cmake  gameserver-simple.xml
inexor/: CMakeLists.txt
inexor/engine/: main.cpp
inexor/gluegen/: CMakeLists.txt  readme.md
inexor/rpc/: CMakeLists.txt  RpcSubsystem.cpp  RpcSubsystem.hpp
